# autobot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  robot.cpp  test.cpp
autoboard/: CMakeLists.txt
autoboard/src/: container.cpp  container.h  main.cpp
autoboard/src/data/: obsr.cpp  obsr.h  obsr_storage.cpp  obsr_storage.h  registry.cpp  registry.h  scheme.h  source.cpp  source.h
autoboard/src/glad/: glad.c  glad.h
autoboard/src/obsr/: storage.cpp  storage.h  window.cpp  window.h
autoboard/src/plots/: plots.cpp  plots.h  timed_plot_updater.h  xy_plot.cpp  xy_plot.h
autoboard/src/render/: body.cpp  body.h  camera.cpp  camera.h  gl.cpp  gl.h  mesh.cpp  mesh.h  render.cpp  render.h  shader.cpp  shader.h  transform.h
autoboard/src/widgets/: canvas.cpp  canvas.h  obsr.cpp  obsr.h  widgets.h
autobot/: CMakeLists.txt
autobot/include/: units.h
autobot/include/dashboard/: canvas.h  color.h  object.h  toggle.h  world.h
autobot/include/math/: common.h
autobot/src/dashboard/: canvas.cpp  object.cpp  toggle.cpp  world.cpp
hal/: CMakeLists.txt
hal/beagleboneblack/defs/: CMakeLists.txt  pins.cpp  pins.h
hal/core/: CMakeLists.txt
hal/core/include/: hal.h  hal_actions.h  hal_except.h  hal_types.h
hal/core/include/backend/: hal_backend.h  hal_control.h
hal/core/src/: backend.cpp  backend.h  control.cpp  devices.h  global.cpp  global.h  hal.cpp  hal_actions.cpp  hal_config.cpp  hal_create.cpp  hal_obsr.cpp  hal_obsr.h  hal_query.cpp  hal_serial.cpp  hal_value.cpp  handles.cpp  handles.h  ports.cpp  ports.h
hal/sim/: CMakeLists.txt
hal/sim/include/: hal_sim.h
hal/sim/src/: backend.cpp  global.cpp  global.h  sim.cpp
include/: units.h
include/dashboard/: object.h
include/math/: common.h  ops.h
include/math/control/: feed_forward.h  pid.h  trapezoid_profile.h  triangle_profile.h
include/math/plant/: dc_motor.h  plant.h
include/sim/: dc_motor.h
src/dashboard/: object.cpp
src/math/plant/: dc_motor.cpp
src/sim/: dc_motor.cpp
